@@ -59,11 +59,11 @@ sub parameter {
 sub profcfunc {
     my $filename = shift;
     # Remove hex numbers before diffing
-    my $fh = IO::File->new ($filename) or die "%Error: $! $filename,";
+    my $fh = IO::File->new($filename) or die "%Error: $! $filename,";
 
     my %funcs;
 
-    while (defined (my $line=$fh->getline())) {
+    while (defined(my $line = $fh->getline)) {
         #                  %time      cumesec   selfsec     calls     {stuff}   name
         if ($line =~ /^\s*([0-9.]+)\s+[0-9.]+\s+([0-9.]+)\s+([0-9.]+)\s+[^a-zA-Z_]*([a-zA-Z_].*)$/) {
             my $pct=$1; my $sec=$2; my $calls=$3; my $func=$4;
@@ -83,44 +83,44 @@ sub profcfunc {
     $fh->close;
 
     # Find modules
-    my %pointer_mods;
     my %verilated_mods;
     foreach my $func (keys %funcs) {
-        if ($func =~ /(.*)::_eval\(([a-zA-Z_0-9]+__Syms).*\)$/) {
+        if ($func =~ /(.*)::eval\(/) {
+            print "-got _eval $func   prefix=$1\n" if $Debug;
             $verilated_mods{$1} = qr/^$1/;
-            $pointer_mods{$2} = $1;
         }
     }
-    #print Dumper(\%pointer_mods, \%verilated_mods);
+    #print Dumper(\%verilated_mods);
 
-    # Resort by Verilog name
+    # Sort by Verilog name
     my %vfuncs;
     my %groups;
     foreach my $func (keys %funcs) {
         my $pct = $funcs{$func}{pct};
         my $vfunc = $func;
+
+        (my $funcarg = $func) =~ s/^.*\(//;
+
         my $design;
-
-        if ($func =~ /\(([a-zA-Z_0-9]+__Syms)/) {
-            $design = $pointer_mods{$1};
-        }
-
         foreach my $vde (keys %verilated_mods) {
-            last if $design;
-            if ($func =~ /$verilated_mods{$vde}/) {
-                $design=$vde;
+            if ($func =~ /$verilated_mods{$vde}/
+                || $funcarg =~ /$verilated_mods{$vde}/) {
+                $design = $vde;
                 last;
             }
         }
 
-        if ($vfunc =~ /__PROF__([a-zA-Z_0-9]+)__l?([0-9]+)\(/) {
+        my $vdesign = "-";
+        if ($design && $vfunc =~ /__PROF__([a-zA-Z_0-9]+)__l?([0-9]+)\(/) {
             $vfunc     = sprintf("VBlock    %s:%d", $1, $2);
+            $vdesign = $design;
             $groups{type}{"Verilog Blocks under $design"} += $pct;
             $groups{design}{$design} += $pct;
             $groups{module}{$1} += $pct;
         } else {
             if ($design) {
                 $vfunc = sprintf("VCommon   %s", $func);
+                $vdesign = $design;
                 $groups{type}{"Common code under $design"} += $pct;
                 $groups{design}{$design} += $pct;
                 $groups{module}{$design." common code"} += $pct;
@@ -143,7 +143,14 @@ sub profcfunc {
                 $groups{module}{'C++'} += $pct;
             }
         }
-        $vfuncs{$vfunc} = $funcs{$func};
+        if (!$vfuncs{$vfunc}) {
+            $vfuncs{$vfunc} = $funcs{$func};
+            $vfuncs{$vfunc}{design} = $vdesign;
+        } else {
+            $vfuncs{$vfunc}{pct} += $funcs{$func}{pct};
+            $vfuncs{$vfunc}{calls} += $funcs{$func}{calls};
+            $vfuncs{$vfunc}{sec} += $funcs{$func}{sec};
+        }
     }
 
 
@@ -165,6 +172,13 @@ sub profcfunc {
         print("\n");
     }
 
+    my $design_width = 1;
+    foreach my $func (keys %vfuncs) {
+        if ($design_width < length($vfuncs{$func}{design})) {
+            $design_width = length($vfuncs{$func}{design});
+        }
+    }
+
     print("Verilog code profile:\n");
     print("   These are split into three categories:\n");
     print("      C++:     Time in non-Verilated C++ code\n");
@@ -175,17 +189,21 @@ sub profcfunc {
     print("\n");
 
     print("  %   cumulative   self              \n");
-    print(" time   seconds   seconds    calls   type      filename and line number\n");
+    print(" time   seconds   seconds    calls   ");
+    printf("%-${design_width}s", "design");
+    print("  type      filename and line number\n");
 
     my $cume = 0;
     foreach my $func (sort {$vfuncs{$b}{sec} <=> $vfuncs{$a}{sec}
                             || $a cmp $b}
                       (keys %vfuncs)) {
         $cume += $vfuncs{$func}{sec};
-        printf +("%6.2f %9.2f %8.2f %8d   %s\n",
+        printf +("%6.2f %9.2f %8.2f %8d   %-${design_width}s  %s\n",
                  $vfuncs{$func}{pct},
-                 $cume, $vfuncs{$func}{sec},
+                 $cume,
+                 $vfuncs{$func}{sec},
                  $vfuncs{$func}{calls},
+                 $vfuncs{$func}{design},
                  $func);
     }
 }
